<resources>
    <string name="app_name">stutor</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_registered_user_sign_up">Not a Registered User? Sign Up.</string>
    <string name="logo">logo</string>
    <string name="auth_failed">Wrong Password</string>
    <string name="minimum_password">Password length is shorter than 6 characters.</string>
    <string name="we_need_your_registered_email_id_to_send_you_password_reset_instructions">We need your registered Email Id to send you password reset instructions.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="role">Role</string>
    <string name="username">username</string>
    <string name="user_name">User Name</string>
</resources>
